--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -8,25 +8,17 @@
 }
 
 main{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    text-align: center;
     background-image: url(/assets/images/back3.svg);
     background-repeat: no-repeat;
     background-position:bottom;
     background-size: cover;
-    height: 100vh;
     padding: 6rem 11rem;
 }
 
 .container {
     display: flex;
-    justify-content: space-between;
     position: relative;
-    border-radius: 10px;
     overflow: hidden;
-    padding: 0 1rem;
 }
 
 
@@ -46,11 +38,13 @@ main{
     z-index: 20;
     display: flex;
     flex-direction: column;
+    align-items: flex-start;
+    text-align: center;
     animation: fadeUp 0.6s ease-in-out;
 }
 
 .container-text h1{
-    font-size: 57px;
+    font-size: 4.5rem;
     font-weight: 600;
 }
 
@@ -67,7 +61,8 @@ main{
 }
 
 .container-button{
-    align-items: center;
+    display: flex;
+    margin: auto;
 }
 
 .container-button button{
