--- a/assets/css/section2.css
+++ b/assets/css/section2.css
@@ -1,94 +1,12 @@
-.main-section{
-    display: flex;
-    justify-content: center;
-    position: relative;
-    height: 100vh;
-    padding: 0rem 7rem;
-    background-color: #030014;
+.technologies{
+    border: 1px solid red;
+    padding: 0rem 11rem;
 }
 
-.section-image{
-    width: 35%;
-    background-image: url(/assets/images/imagesection2.png);
-    background-position: center;
-    background-size: cover;
+.back{
+    height: 500px;
+    width: 100%;
+    background-image: url(/assets/images/main.png);
     background-repeat: no-repeat;
-    border-radius: 7px;
-    margin-right: 90px;
-}
-
-.section-text{
-    width: 52%;
-    padding: 3rem 0;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    padding: 0.8rem 0;
-}
-
-.row{
-    display: flex;
-    width: 600px;
-    gap: 5px;
-    align-items: start;
-    margin-top: 30px;
-
-}
-
-.section-description{
-    padding: 0.5rem 0rem 0rem 4rem;
-    transition: transform 0.6s ease, opacity 0.6s ease;
-}
-
-.contain{
-    position: relative;
-    width: 2.8rem;
-    padding: 6px 0;
-    left: 6px;
-    background-color: #26262B;
-    border-radius: 2px;
-}
-
-.span-number{
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    font-size: 27px;
-    transition: transform 0.6s ease, opacity 0.6s ease;
-}
-
-.contain:nth-child(1){
-    animation-delay: 0;
-}
-
-.containr:nth-child(2){
-    animation-delay: 0.2s;
-}
-
-.contain:nth-child(3){
-    animation-delay: 0.4s;
-}
-
-.span-number::after{
-    content: "";
-    position: absolute;
-    left: 100%;
-    height: 0.18rem;
-    width: 45px;
-    background-color: #373737;
-}
-
-.column{
-    position: absolute;
-    width: 0.18rem;
-    height: 75%;
-    left: 20px;
-    background-color: #373737;
-}
-
-.title-text{
-    font-size: 22px;
-    font-weight: 400;
-    margin-bottom: 10px;
+    background-position: center;
 }
